[package]
name = "first-iced-app"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = {version = "0.13.1", features = ["debug", "tokio"]}
tokio = {version = "1.47.1", features = ["full"]}
rfd = "0.15.4"

[package.metadata.bundle]
name = "Simple text editor"
identifier = "io.github.RoxtroffJ.first-iced-app"
